kuber-general/12.5/manifests/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  selector:
    app: backend
  ports:
  - name: multitool-http
    port: 8080
    targetPort: 8080
