kuber-general/12.5/manifests/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: frontend
  ports:
  - name: nginx-http
    port: 80
    targetPort: 80
